--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "angular2-materialize": "^15.1.10",
+    "hammerjs": "^2.0.8",
+    "jquery": "^2.2.4",
+    "materialize-css": "^1.0.0",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^9.14.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
